DEVOPS/kairos03/minio-deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2025-06-24T11:04:34Z"
  generation: 5
  name: minio
  namespace: sesiones-clinicas
  resourceVersion: "446680056"
  uid: bc2d36c7-a1e0-4257-bd68-ee848815961e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio
    spec:
      containers:
      - args:
        - minio server /data --console-address :9090
        command:
        - /bin/bash
        - -c
        env:
        - name: MINIO_ROOT_USER
          valueFrom:
            secretKeyRef:
              key: minio_root_user
              name: sesiones-clinicas
        - name: MINIO_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: minio_root_password
              name: sesiones-clinicas
        - name: TZ
          value: Europe/Madrid
        image: quay.io/minio/minio:latest
        imagePullPolicy: Always
        name: minio
        ports:
        - containerPort: 9000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: minio-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      serviceAccount: bahia
      serviceAccountName: bahia
      terminationGracePeriodSeconds: 30
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-06-24T11:04:34Z"
    lastUpdateTime: "2025-11-24T12:14:00Z"
    message: ReplicaSet "minio-5bdcbdfb8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-11-25T15:07:40Z"
    lastUpdateTime: "2025-11-25T15:07:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
