DEVOPS/kairos03/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: sesiones-clinicas
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio
    spec:
      containers:
      - args:
        - minio server /data --console-address :9090
        command:
        - /bin/bash
        - -c
        env:
        - name: MINIO_ROOT_USER
          valueFrom:
            secretKeyRef:
              key: minio_root_user
              name: sesiones-clinicas
        - name: MINIO_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: minio_root_password
              name: sesiones-clinicas
        - name: TZ
          value: Europe/Madrid
        image: quay.io/minio/minio:latest
        imagePullPolicy: Always
        name: minio
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: minio-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      serviceAccount: bahia
      serviceAccountName: bahia
      terminationGracePeriodSeconds: 30
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-data
