DEVOPS/kairos03/rgv-services-ingress-BACKUP.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"labels":{"router":"intranet"},"name":"rgv-services-ingress","namespace":"etc"},"spec":{"host":"rgv-services.produccio.apps.kairos03.santpau.es","port":{"targetPort":"http-port"},"tls":{"insecureEdgeTerminationPolicy":"Allow","termination":"edge"},"to":{"kind":"Service","name":"rgv-service","weight":100},"wildcardPolicy":"None"}}
  creationTimestamp: "2024-05-08T14:31:08Z"
  labels:
    k8s-app: rgv
    router: intranet
  name: rgv-services-ingress
  namespace: etc
  resourceVersion: "535529535"
  uid: 52cd3fe3-196c-45cc-86f0-0834963b33c6
spec:
  host: rgv-services.produccio.apps.kairos03.santpau.es
  port:
    targetPort: http-port
  tls:
    caCertificate: |-
      subject=CN=GEANT TLS RSA 1, O=Hellenic Academic and Research Institutions CA, C=GR
      issuer=CN=HARICA TLS RSA Root CA 2021, O=Hellenic Academic and Research Institutions CA, C=GR
      -----BEGIN CERTIFICATE-----
      MIIGBTCCA+2gAwIBAgIQFNV782kiKCGaVWf6kWUbIjANBgkqhkiG9w0BAQsFADBsMQswCQYDVQQG
[...]
      V9IaUQGJ
      -----END CERTIFICATE-----
      subject=CN=HARICA TLS RSA Root CA 2021, O=Hellenic Academic and Research Institutions CA, C=GR
      issuer=CN=Hellenic Academic and Research Institutions RootCA 2015, O=Hellenic Academic and Research Institutions Cert. Authority, L=Athens, C=GR
      -----BEGIN CERTIFICATE-----
      MIIGwDCCBKigAwIBAgIQKmCG1NTeRcleS5j7vy+/JjANBgkqhkiG9w0BAQsFADCBpjELMAkGA1UE
[...]
      yGR0asw7CooV2DCfiEJlIsKzLcPZew==
      -----END CERTIFICATE-----
    certificate: |-
      subject=CN=rgv-services.produccio.apps.kairos03.santpau.es, O=Fundació Gestió Sanitària Hospital de la Santa Creu i Sant Pau, L=Barcelona, C=ES
      issuer=CN=GEANT TLS RSA 1, O=Hellenic Academic and Research Institutions CA, C=GR
      -----BEGIN CERTIFICATE-----
      MIIHWTCCBcGgAwIBAgIQICpy6bfy6dJscBLOcIIibzANBgkqhkiG9w0BAQsFADBgMQswCQYDVQQG
[...]
      WlDS2A==
      -----END CERTIFICATE-----
      subject=CN=GEANT TLS RSA 1, O=Hellenic Academic and Research Institutions CA, C=GR
      issuer=CN=HARICA TLS RSA Root CA 2021, O=Hellenic Academic and Research Institutions CA, C=GR
      -----BEGIN CERTIFICATE-----
      MIIGBTCCA+2gAwIBAgIQFNV782kiKCGaVWf6kWUbIjANBgkqhkiG9w0BAQsFADBsMQswCQYDVQQG
[...]
      V9IaUQGJ
      -----END CERTIFICATE-----
      subject=CN=HARICA TLS RSA Root CA 2021, O=Hellenic Academic and Research Institutions CA, C=GR
      issuer=CN=Hellenic Academic and Research Institutions RootCA 2015, O=Hellenic Academic and Research Institutions Cert. Authority, L=Athens, C=GR
      -----BEGIN CERTIFICATE-----
      MIIGwDCCBKigAwIBAgIQKmCG1NTeRcleS5j7vy+/JjANBgkqhkiG9w0BAQsFADCBpjELMAkGA1UE
[...]
      yGR0asw7CooV2DCfiEJlIsKzLcPZew==
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Allow
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCThKps/qyxr+4/
[...]
      lLear9rtXeRxvPKVwCmjboM=
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: rgv-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-05-08T14:31:08Z"
      status: "True"
      type: Admitted
    host: rgv-services.produccio.apps.kairos03.santpau.es
    routerCanonicalHostname: router-default.apps.kairos03.santpau.es
    routerName: default
    wildcardPolicy: None
